--- a/src/Birds/Birds.css
+++ b/src/Birds/Birds.css
@@ -1,3 +1,11 @@
 .bird {
     border: red 1px solid;
 }
+
+.birds-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 14rem;
+}
