--- a/src/Birds/Birds.css
+++ b/src/Birds/Birds.css
@@ -18,6 +18,14 @@
     margin-top: 4rem;
 }
 
+.bird-form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+
+}
+
 footer {
     position: fixed;
     bottom: 0;
