--- a/src/Birds/Birds.css
+++ b/src/Birds/Birds.css
@@ -17,6 +17,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 4rem;
+    margin-left: 10rem;
 }
 
 .bird-detail {
@@ -26,6 +27,7 @@
     margin-top: 4rem;
     font-family: 'source serif 4', serif;
     font-weight: 300;
+    margin-left: 12rem;
 }
 
 .name {
@@ -47,6 +49,10 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
+}
+
+.bird-form {
+    margin-left: 8rem;
 }
 
 .bird-form form {
